--- a/conceito/libs/css/master.css
+++ b/conceito/libs/css/master.css
@@ -53,7 +53,7 @@
 
 }
 
-body,a{
+body,a,a:hover{
 	color: #dbd2c6;
 }
 
@@ -198,6 +198,7 @@ header{
 	border: 0;
 	font-size: 13px;
 	padding: 20px 20px 20px 51px;
+	color: #fff;
 	width: 440px;
 	height: 48px;
 	border-radius: 5px;
@@ -207,6 +208,13 @@ header{
 	position: absolute;
 	right: 41px;
 	top: 37px;
+	width: 132px;
+	height: 36px;
+	background: url(../img/bt-enviar.png) no-repeat;
+}
+
+.form-input input[type=image]:hover{
+	background: url(../img/bt-enviar-over.png) no-repeat;
 }
 
 .numeros-sucesso{
